--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "a-la-mode-db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,14 @@
   },
   "homepage": "https://github.com/PinedaVictor/a-la-mode-db#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1"
   }
 }
