Added minial example of fetching data from cloud function

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,8 +1,9 @@
 {
   "name": "functions",
   "scripts": {
+    "clean": "rm -rf ./lib",
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
+    "build": "npm run clean && tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
@@ -13,7 +14,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "dependencies": {
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
