Removed start cmd from post_build phase

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,8 +15,7 @@ phases:
       - npm run build
   post_build:
     commands:
-      - echo Starting build
-      - npm start
+      - echo Build finished
 artifacts:
   files:
     - "**/*"
